added css style on admin dashboard

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,7 +1,8 @@
 body,
 html {
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
+    overflow-x:auto;
     padding-top: 44px;
 }
 
@@ -68,4 +69,15 @@ html {
 
 .show-article-wrapper {
     padding: 40px;
+}
+.post{
+    width: 30rem;
+    height: 10rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.post-items{
+    padding: 20px;
 }
